fixed logo text align issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,7 +18,7 @@
     .logo {
       height: 5rem;
       padding-top: 2rem;
-      padding-left: 6rem;
+      padding-left: 4rem;
       margin-bottom: 2rem;
 
       a {
